# wifi-qr-reader

./: Cargo.toml  README.md
src/: main.rs  qrcode.rs
